RESOLVED FIXED 29210
Assertion failed in Node::isFocusable
https://bugs.webkit.org/show_bug.cgi?id=29210
Summary Assertion failed in Node::isFocusable
Erik Arvidsson
Reported 2009-09-11 14:48:11 PDT
Created attachment 39478 [details] Test case If a link is inside a display:none div and it will not have a renderer and it has styleNeedsRecalc() returning true. This causes the assert to fail. In the URL above, and in the test case, focus the address field and press tab. This triggered the assert.
Attachments
Test case (352 bytes, text/html)
2009-09-11 14:48 PDT, Erik Arvidsson
no flags
Fixes an assert in Node::isFocusable which was causing crashes in certain cases. (3.68 KB, patch)
2009-09-11 15:36 PDT, Erik Arvidsson
no flags
Erik Arvidsson
Comment 1 2009-09-11 15:36:36 PDT
Created attachment 39482 [details] Fixes an assert in Node::isFocusable which was causing crashes in certain cases. https://bugs.webkit.org/show_bug.cgi?id=29210 --- 6 files changed, 64 insertions(+), 1 deletions(-)
Eric Seidel (no email)
Comment 2 2009-09-11 16:43:22 PDT
Comment on attachment 39482 [details] Fixes an assert in Node::isFocusable which was causing crashes in certain cases. Looks sane to me.
WebKit Commit Bot
Comment 3 2009-09-11 17:17:32 PDT
Comment on attachment 39482 [details] Fixes an assert in Node::isFocusable which was causing crashes in certain cases. Rejecting patch 39482 from commit-queue. This patch will require manual commit. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 cwd: None
Eric Seidel (no email)
Comment 4 2009-09-11 17:18:39 PDT
Comment on attachment 39482 [details] Fixes an assert in Node::isFocusable which was causing crashes in certain cases. bug 28316. I'm working on fixing this right now.
WebKit Commit Bot
Comment 5 2009-09-11 19:18:04 PDT
Comment on attachment 39482 [details] Fixes an assert in Node::isFocusable which was causing crashes in certain cases. Clearing flags on attachment: 39482 Committed r48327: <http://trac.webkit.org/changeset/48327>
WebKit Commit Bot
Comment 6 2009-09-11 19:18:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.