2009-09-11  Erik Arvidsson  <arv@chromium.org>

Reviewed by Eric Seidel.

        Fixes an assert in Node::isFocusable which was causing crashes in certain cases.
        https://bugs.webkit.org/show_bug.cgi?id=29210

        * fast/events/resources/tab-is-focusable-assert.js:
        * fast/events/tab-is-focusable-assert-expected.txt: Added.
2009-09-11  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Eric Seidel.

        Fixes an assert in Node::isFocusable which was causing crashes in certain cases.
        https://bugs.webkit.org/show_bug.cgi?id=29210

        * dom/Node.cpp:
        (WebCore::Node::isFocusable):

Canonical link: https://commits.webkit.org/39896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48327 268f45cc-cd09-0410-ab3c-d52691b4dbfc